--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "24.0.21",
     "@types/node": "12.12.0",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
+    "@types/react-redux": "^7.1.5",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
     "typescript": "3.6.4"
   },
   "scripts": {
@@ -17,6 +24,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "prettier": {
+    "singQuote": true,
+    "trailingComma": "all",
+    "arrowParens": "always",
+    "printWidth": 80
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "1.18.2"
   }
 }
